Fix overflow in landing page

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1023,3 +1023,20 @@ input[type=number] {
 .shaded {
   background: grey;
 }
+
+.p-scroll{
+  height: 300px;
+  overflow: scroll;
+}  
+.p-scroll::-webkit-scrollbar {
+  display: none;
+}
+@media only screen and (max-width:500px){
+  .p-scroll{
+    height: 250px;
+    overflow: scroll;
+  }  
+  .p-scroll::-webkit-scrollbar {
+    display: none;
+  }
+} 
